--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -899,8 +899,58 @@ class Solution {
 ## [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
 
 ```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        int maxLength = 0, left = 0, right = 0;
+        HashSet<Character> cache = new HashSet<>();
+        for (;right < s.length(); right++) {
+            char c = s.charAt(right);
+            if (cache.contains(c)) {
+                do {
+                    char l = s.charAt(left);
+                    cache.remove(l);
+                    left++;
+                } while (cache.contains(c));
+                cache.add(c);
+            } else {
+                cache.add(c);
+                maxLength = Math.max(maxLength, cache.size());
+            }
+        }
+        return maxLength;
+    }
+}
 ```
 
 ## [150. Evaluate Reverse Polish Notation](https://leetcode.com/problems/evaluate-reverse-polish-notation/)
+```java
+class Solution {
+    public int evalRPN(String[] tokens) {
+        List<String> operands = List.of("+", "-", "*", "/");
+        Stack<String> stack = new Stack<>();
+        for (String t : tokens) {
+            if (operands.contains(t)) {
+                String b = stack.pop();
+                String a = stack.pop();
+                if (t.equals("+")) {
+                    stack.push(String.valueOf(Integer.valueOf(a) + Integer.valueOf(b)));
+                } else if (t.equals("-")) {
+                    stack.push(String.valueOf(Integer.valueOf(a) - Integer.valueOf(b)));
+                } else if (t.equals("*")) {
+                    stack.push(String.valueOf(Integer.valueOf(a) * Integer.valueOf(b)));
+                } else {
+                    stack.push(String.valueOf(Integer.valueOf(a) / Integer.valueOf(b)));
+                }
+            } else {
+                stack.push(t);
+            }
+        }
+        return Integer.valueOf(stack.pop());
+    }
+}
+```
+
+## [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
+
 ```java
 ```
