--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -954,3 +954,13 @@ class Solution {
 
 ```java
 ```
+
+## [226. Invert Binary Tree](https://leetcode.com/problems/invert-binary-tree/description/)
+
+```java
+```
+
+## [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
+
+```java
+```
