--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -958,6 +958,19 @@ class Solution {
 ## [226. Invert Binary Tree](https://leetcode.com/problems/invert-binary-tree/description/)
 
 ```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if (root == null) {
+            return null;
+        }
+        invertTree(root.left);
+        invertTree(root.right);
+        TreeNode tmp = root.left;
+        root.left = root.right;
+        root.right = tmp;
+        return root;
+    }
+}
 ```
 
 ## [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
