--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -950,11 +950,6 @@ class Solution {
 }
 ```
 
-## [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
-
-```java
-```
-
 ## [226. Invert Binary Tree](https://leetcode.com/problems/invert-binary-tree/description/)
 
 ```java
@@ -973,7 +968,27 @@ class Solution {
 }
 ```
 
+## [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
+
+```java
+```
+
 ## [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
+
+```java
+```
+
+## [322. Coin Change](https://leetcode.com/problems/coin-change/description/)
+
+```java
+```
+
+## [994. Rotting Oranges](https://leetcode.com/problems/rotting-oranges/description/)
+
+```java
+```
+
+## [733. Flood Fill](https://leetcode.com/problems/flood-fill/description/)
 
 ```java
 ```
