--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -971,6 +971,62 @@ class Solution {
 ## [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
 
 ```java
+class Solution {
+    public int largestRectangleArea(int[] heights) {
+        return stackSolution(heights);
+    }
+
+    // https://leetcode.com/problems/largest-rectangle-in-histogram/solutions/28902/5ms-o-n-java-solution-explained-beats-96/
+    private int regularSolution(int[] heights) {
+        if (heights == null || heights.length == 0) {
+            return 0;
+        }
+
+        int[] lessFromLeft = new int[heights.length];
+        int[] lessFromRight = new int[heights.length];
+        lessFromLeft[0] = -1;
+        lessFromRight[heights.length - 1] = heights.length;
+
+        for (int i = 1; i < heights.length; i++) {
+            int p = i - 1;
+            while (p >= 0 && heights[p] >= heights[i]) {
+                p = lessFromLeft[p];
+            }
+            lessFromLeft[i] = p;
+        }
+
+        for (int i = heights.length - 2; i >= 0; i--) {
+            int p = i + 1;
+            while (p < heights.length && heights[p] >= heights[i]) {
+                p = lessFromRight[p];
+            }
+            lessFromRight[i] = p;
+        }
+
+        int maxArea = 0;
+        for (int i = 0; i < heights.length; i++) {
+            maxArea = Math.max(maxArea, heights[i] * (lessFromRight[i] - lessFromLeft[i] - 1));
+        }
+
+        return maxArea;
+    }
+
+    // https://leetcode.com/problems/largest-rectangle-in-histogram/solutions/995249/python-increasing-stack-explained/
+    private int stackSolution(int[] heights) {
+        Stack<Integer> stack = new Stack<>();
+        int maxArea = 0;
+        for(int i = 0; i <= heights.length; i++) {
+            int height = i == heights.length ? 0 : heights[i];
+            while(!stack.empty() && heights[stack.peek()] > height) {
+                int h = heights[stack.pop()];
+                int w = stack.empty() ? i : i - stack.peek() - 1;
+                maxArea = Math.max(maxArea, h * w);
+            }
+            stack.push(i);
+        }
+        return maxArea;
+    }
+}
 ```
 
 ## [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
