--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1075,3 +1075,14 @@ class Solution {
 
 ```java
 ```
+
+## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
+
+```java
+
+```
+
+## [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
+
+```java
+```
