--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1103,6 +1103,63 @@ class Solution {
 
 ## [994. Rotting Oranges](https://leetcode.com/problems/rotting-oranges/description/)
 
+Note that in Graph BFS, compared with Tree BFS, we need to mark the visited node as visited to prevent infinite loop.
+
+```c++
+// https://leetcode.com/problems/rotting-oranges/
+class Solution {
+public:
+    int orangesRotting(vector<vector<int>>& grid) {
+        int m = grid.size();
+        int n  = grid[0].size();
+
+        vector<vector<int>> visited = grid;
+        queue<pair<int, int>> q;
+
+        int countFreshOrange = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j =0; j < n; j++) {
+                if (visited[i][j] == 2) {
+                    q.push({i, j});
+                }
+                if (visited[i][j] == 1) {
+                    countFreshOrange++;
+                }
+            }
+        }
+        //q.empty() means there is no rotten orange in the grid and countFreshOrange = 0 means we will rotten the freshoranges in 0 mins
+        if (countFreshOrange == 0)
+            return 0;
+        if (q.empty())
+            return -1;
+
+        int minutes = -1;
+        int directions[] = {-1, 0, 1, 0, -1};
+        while(!q.empty()) {
+            int size = q.size();
+            while (size--) { // so that we can count the steps
+                auto [i, j] = q.front();
+                q.pop();
+                for (int k = 0; k < 4; k++) {
+                    int ni = i + directions[k];
+                    int nj = j + directions[k+1];
+                    if (ni >=0 && ni < m && nj >= 0 && nj < n && visited[ni][nj] == 1) {
+                        visited[ni][nj] = 2;
+                        countFreshOrange--;
+                        q.push({ni, nj});
+                    }
+                }
+            }
+            minutes++;
+        }
+
+        if (countFreshOrange == 0)
+            return minutes;
+        return -1;
+    }
+};
+```
+
 ```java
 ```
 
