--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1105,7 +1105,7 @@ class Solution {
 
 Note that in Graph BFS, compared with Tree BFS, we need to mark the visited node as visited to prevent infinite loop.
 
-```c
+```c++
 // https://leetcode.com/problems/rotting-oranges/
 class Solution {
 public:
@@ -1160,12 +1160,51 @@ public:
 };
 ```
 
-```java
-```
-
 ## [733. Flood Fill](https://leetcode.com/problems/flood-fill/description/)
 
-```java
+```c++
+// https://leetcode.com/problems/flood-fill/solutions/4745988/easy-dfs-solution-c/
+class Solution {
+public:
+    Solution() : directions{-1, 0, 1, 0, -1} {}
+
+    vector<vector<int>> floodFill(vector<vector<int>>& image, int sr, int sc, int color) {
+        vector<vector<int>> ans = image; // equivalent to the visited marker
+        dfs(sr, sc, color, image[sr][sc], ans, image);
+        //dfs(sr, sc, color, image[sr][sc], ans, image, this->directions);
+        return ans;
+    }
+
+    void dfs(int row, int col, int color, int initColor, vector<vector<int>>& ans, vector<vector<int>>& image) {
+        ans[row][col] = color;
+        int m = image.size();
+        int n = image[0].size();
+        for (int i=0; i<4; i++) {
+            int nRow = row + this->directions[i]; 
+            int nCol = col + this->directions[i+1];
+            if (nRow >= 0 && nRow < m && nCol >= 0 && nCol < n && image[nRow][nCol] == initColor && ans[nRow][nCol] != color) {
+                dfs(nRow, nCol, color, initColor, ans, image);
+            }
+        }
+    }
+
+    // just to demo the usage of reference to an array: 
+    // https://stackoverflow.com/questions/32732957/syntax-for-returning-an-array-reference-in-c
+    void dfs(int row, int col, int color, int initColor, vector<vector<int>>& ans, vector<vector<int>>& image, const int (&dirs)[5]) {
+        ans[row][col] = color;
+        int m = image.size();
+        int n = image[0].size();
+        for (int i=0; i<4; i++) {
+            int nRow = row + dirs[i]; 
+            int nCol = col + dirs[i+1];
+            if (nRow >= 0 && nRow < m && nCol >= 0 && nCol < n && image[nRow][nCol] == initColor && ans[nRow][nCol] != color) {
+                dfs(nRow, nCol, color, initColor, ans, image, dirs);
+            }
+        }
+    }
+private: 
+    const int directions[5];
+};
 ```
 
 ## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
