--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1202,6 +1202,10 @@ public:
             }
         }
     }
+    
+    const int (&getDirections() const)[3] { // Getter function to return const reference to the array
+        return directions;
+    }
 private: 
     const int directions[5];
 };
