--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1213,11 +1213,16 @@ private:
 
 ## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
 
-```java
+```c
 
 ```
 
 ## [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
 
-```java
+```c
+```
+
+## [232. Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/description/)
+
+```c
 ```
