--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1211,10 +1211,94 @@ private:
 };
 ```
 
+Note that for the primitive array, e.g., `int a[3]`,
+1. the `a` is a const pointer to the first element in the array, which means `a = b` is not allow
+2. it's allocated in the stack, as opposed to `const int b[] = new int[3]`
+3. to free the memory of the array b, and the objects contained in b, `delete [] b` should be used
+
 ## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
 
 ```c
+// https://leetcode.com/problems/lru-cache/solutions/4841607/easy-beats-100-with-explanation/
+class LRUCache {
+public:
+    LRUCache(int capacity): cap(capacity), head(new Node(-1, -1)), tail(new Node(-1, -1)) {
+        head->next = tail;
+        tail->prev = head;
+    }
+    
+    int get(int key) {
+        if (m.find(key) != m.end()) {
+            Node* curr = m[key];
+            int ans = curr->val;
+            
+            deleteNode(curr);
+            addNode(curr); // add to the first
 
+            return ans;
+        }
+        return -1;
+    }
+    
+    void put(int key, int value) {
+        if (m.find(key) != m.end()) {
+            Node* curr = m[key];
+            m.erase(key);
+            deleteNode(curr);
+            delete curr;
+        }
+
+        if (m.size() == cap) {
+            Node* last = tail->prev;
+            m.erase(last->key);
+            deleteNode(last);
+            delete last;
+        }
+
+        addNode(new Node(key, value));
+        m[key] = head->next;
+    }
+private: 
+    // private members of the nested classes are not visible from instances of the enclosing class
+    class Node { 
+    public:
+        Node(int k, int v): key(k), val(v) {}     
+    private:
+        Node* prev;
+        Node* next;
+        int key;
+        int val;  
+
+        friend class LRUCache;
+    };   
+
+    int cap;
+    unordered_map<int, Node*> m;
+    Node* head;
+    Node* tail;
+
+    void addNode(Node* newNode) {
+        Node* temp = head->next;
+        newNode->next = temp;
+        newNode->prev = head;
+        temp->prev = newNode;
+        head->next = newNode;
+    } 
+
+    void deleteNode(Node* delNode) {
+        Node* prevv = delNode->prev;
+        Node* nextt = delNode->next;
+        prevv->next = nextt;
+        nextt->prev = prevv;
+    }
+};
+
+/**
+ * Your LRUCache object will be instantiated and called as such:
+ * LRUCache* obj = new LRUCache(capacity);
+ * int param_1 = obj->get(key);
+ * obj->put(key,value);
+ */
 ```
 
 ## [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
