--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1219,13 +1219,17 @@ Note that for the primitive array, e.g., `int a[3]`,
 ## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
 
 ```c
-// https://leetcode.com/problems/lru-cache/solutions/4841607/easy-beats-100-with-explanation/
 class LRUCache {
 public:
     LRUCache(int capacity): cap(capacity), head(new Node(-1, -1)), tail(new Node(-1, -1)) {
         head->next = tail;
+        head->prev = nullptr;
         tail->prev = head;
+        tail->next = nullptr;
     }
+
+    LRUCache(const LRUCache&) = delete; // disable copy
+    LRUCache& operator=(const LRUCache&) = delete; // disable copy
     
     int get(int key) {
         if (m.find(key) != m.end()) {
@@ -1257,6 +1261,15 @@ public:
 
         addNode(new Node(key, value));
         m[key] = head->next;
+    }
+
+    ~LRUCache() {
+        Node* d = head;
+        while(d->next != nullptr) {
+            Node* tmp = d->next;
+            delete d;
+            d = tmp;
+        }
     }
 private: 
     // private members of the nested classes are not visible from instances of the enclosing class
