--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1215,6 +1215,7 @@ Note that for the primitive array, e.g., `int a[3]`,
 1. the `a` is a const pointer to the first element in the array, which means `a = b` is not allow
 2. it's allocated in the stack, as opposed to `const int b[] = new int[3]`
 3. to free the memory of the array b, and the objects contained in b, `delete [] b` should be used
+4. note that in `char name[] = "hello"`, the `name` is an array of 6 chars, including the `\0` as the null terminator  
 
 ## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
 
