--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1318,9 +1318,36 @@ private:
 ## [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
 
 ```c
+class Solution {
+public:
+    int leastInterval(vector<char>& tasks, int n) {
+        int freq[26];
+        for (char task : tasks) {
+            freq[task - 'A']++;
+        }
+        sort(begin(freq), end(freq));
+        int chunk = freq[25] - 1;
+        int slots = chunk * n;
+        for (int i = 24; i>=0; i--){
+            slots -= min(chunk, freq[i]);
+        }
+        // note that the slots might be negative when types of tasks are more than the n
+        // and total number of tasks is larger than chunk * n.
+        // eg., n = 2, tasks = ['A','A','A','B','B','B','C','C','C']
+        return max(tasks.size(), tasks.size() + slots);
+    }
+};
 ```
 
 ## [232. Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/description/)
 
+```c
+```
+
+## [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi/description/)
+```c
+```
+
+## [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
 ```c
 ```
