--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1351,3 +1351,7 @@ public:
 ## [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
 ```c
 ```
+
+## [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
+```c
+```
