--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1355,3 +1355,7 @@ public:
 ## [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
 ```c
 ```
+
+## [981. Time Based Key-Value Store](https://leetcode.com/problems/time-based-key-value-store/description/)
+```c
+```
