--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -3,7 +3,7 @@ Grind 75
 
 [Grind 75 questions](https://www.techinterviewhandbook.org/grind75)
 
-## [1. Two Sum](https://leetcode.com/problems/two-sum/)
+## 1. [1. Two Sum](https://leetcode.com/problems/two-sum/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -52,7 +52,7 @@ class TwoSum {
 }
 ```
 
-## [121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/)
+## 2. [121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/)
 
 ```java
 import org.junit.jupiter.api.Test;
@@ -90,7 +90,7 @@ class MaxProfit {
 }
 ```
 
-## [20. Valid Parentheses](https://leetcode.com/problems/valid-parentheses/)
+## 3. [20. Valid Parentheses](https://leetcode.com/problems/valid-parentheses/)
 
 ```java
 import org.junit.jupiter.api.Test;
@@ -154,7 +154,7 @@ class ValidParentheses {
 }
 ```
 
-## [55. Jump Game](https://leetcode.com/problems/jump-game/)
+## 4. [55. Jump Game](https://leetcode.com/problems/jump-game/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -194,7 +194,7 @@ class JumpGame {
 }
 ```
 
-## [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
+## 5. [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -274,7 +274,7 @@ class ClimbStairs {
 }
 ```
 
-## [1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
+## 6. [1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -390,7 +390,7 @@ class JobScheduling {
 }
 ```
 
-## [Maximum Gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
+## 7. [Maximum Gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -447,7 +447,7 @@ class MaximumGold {
 }
 ```
 
-## [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
+## 8. [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
 
 [LeetCode 207 & 210: Course Schedule I & II | Topological Sort | Kahn's algorithm](https://www.youtube.com/watch?v=2l22FRtU45M&t=125s)
 
@@ -510,7 +510,7 @@ class CourseSchedule {
 }
 ```
 
-## [704. Binary Search](https://leetcode.com/problems/binary-search/)
+## 9. [704. Binary Search](https://leetcode.com/problems/binary-search/)
 
 ```java
 class Solution {
@@ -532,7 +532,7 @@ class Solution {
 }
 ```
 
-## [57. Insert Interval](https://leetcode.com/problems/insert-interval/)
+## 10. [57. Insert Interval](https://leetcode.com/problems/insert-interval/)
 
 [Insert Interval - Leetcode 57 - Python](https://www.youtube.com/watch?v=A8NUOmlwOlM)
 
@@ -557,7 +557,7 @@ class Solution {
     }
 }
 ```
-## [56. Merge Intervals](https://leetcode.com/problems/merge-intervals/)
+## 11. [56. Merge Intervals](https://leetcode.com/problems/merge-intervals/)
 
 ```java
 class Solution {
@@ -587,7 +587,7 @@ class Solution {
 }
 ```
 
-## [238. Product of Array Except Self](https://leetcode.com/problems/product-of-array-except-self/)
+## 12. [238. Product of Array Except Self](https://leetcode.com/problems/product-of-array-except-self/)
 
 ```java
 class Solution {
@@ -635,7 +635,7 @@ class Solution {
 }
 ```
 
-## [15. 3Sum](https://leetcode.com/problems/3sum/)
+## 13. [15. 3Sum](https://leetcode.com/problems/3sum/)
 
 ```java
 class Solution {
@@ -669,7 +669,7 @@ class Solution {
 }
 ```
 
-## [75. Sort Colors](https://leetcode.com/problems/sort-colors/)
+## 14. [75. Sort Colors](https://leetcode.com/problems/sort-colors/)
 
 ```java
 class Solution {
@@ -699,7 +699,7 @@ class Solution {
 }
 ```
 
-## [236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+## 15. [236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
 
 ```java
 class Solution {
@@ -725,7 +725,7 @@ class Solution {
 }
 ```
 
-## [542. 01 Matrix](https://leetcode.com/problems/01-matrix/)
+## 16. [542. 01 Matrix](https://leetcode.com/problems/01-matrix/)
 
 ```java
 class Solution {
@@ -784,7 +784,7 @@ class Solution {
 }
 ```
 
-## [199. Binary Tree Right Side View](https://leetcode.com/problems/binary-tree-right-side-view/)
+## 17. [199. Binary Tree Right Side View](https://leetcode.com/problems/binary-tree-right-side-view/)
 
 ```java
 class Solution {
@@ -809,7 +809,7 @@ class Solution {
 }
 ```
 
-## [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
+## 18. [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
 
 ```java
 /*
@@ -856,7 +856,7 @@ class Solution {
 }
 ```
 
-## [230. Kth Smallest Element in a BST](https://leetcode.com/problems/kth-smallest-element-in-a-bst/)
+## 19. [230. Kth Smallest Element in a BST](https://leetcode.com/problems/kth-smallest-element-in-a-bst/)
 
 ```java
 /**
@@ -896,7 +896,7 @@ class Solution {
 }
 ```
 
-## [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
+## 20. [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
 
 ```java
 class Solution {
@@ -922,7 +922,7 @@ class Solution {
 }
 ```
 
-## [150. Evaluate Reverse Polish Notation](https://leetcode.com/problems/evaluate-reverse-polish-notation/)
+## 21. [150. Evaluate Reverse Polish Notation](https://leetcode.com/problems/evaluate-reverse-polish-notation/)
 ```java
 class Solution {
     public int evalRPN(String[] tokens) {
@@ -950,7 +950,7 @@ class Solution {
 }
 ```
 
-## [226. Invert Binary Tree](https://leetcode.com/problems/invert-binary-tree/description/)
+## 22. [226. Invert Binary Tree](https://leetcode.com/problems/invert-binary-tree/description/)
 
 ```java
 class Solution {
@@ -968,7 +968,7 @@ class Solution {
 }
 ```
 
-## [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
+## 23. [84. Largest Rectangle in Histogram](https://leetcode.com/problems/largest-rectangle-in-histogram/)
 
 ```java
 class Solution {
@@ -1029,7 +1029,7 @@ class Solution {
 }
 ```
 
-## [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
+## 24. [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists/description/)
 
 ```java
 /**
@@ -1061,7 +1061,7 @@ class Solution {
 }
 ```
 
-## [322. Coin Change](https://leetcode.com/problems/coin-change/description/)
+## 25. [322. Coin Change](https://leetcode.com/problems/coin-change/description/)
 
 ```java
 class Solution {
@@ -1101,7 +1101,7 @@ class Solution {
 }
 ```
 
-## [994. Rotting Oranges](https://leetcode.com/problems/rotting-oranges/description/)
+## 26. [994. Rotting Oranges](https://leetcode.com/problems/rotting-oranges/description/)
 
 Note that in Graph BFS, compared with Tree BFS, we need to mark the visited node as visited to prevent infinite loop.
 
@@ -1160,7 +1160,7 @@ public:
 };
 ```
 
-## [733. Flood Fill](https://leetcode.com/problems/flood-fill/description/)
+## 27. [733. Flood Fill](https://leetcode.com/problems/flood-fill/description/)
 
 ```c
 // https://leetcode.com/problems/flood-fill/solutions/4745988/easy-dfs-solution-c/
@@ -1217,7 +1217,7 @@ Note that for the primitive array, e.g., `int a[3]`,
 3. to free the memory of the array b, and the objects contained in b, `delete [] b` should be used
 4. note that in `char name[] = "hello"`, the `name` is an array of 6 chars, including the `\0` as the null terminator  
 
-## [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
+## 28. [146. LRU Cache](https://leetcode.com/problems/lru-cache/description/)
 
 ```c
 class LRUCache {
@@ -1315,7 +1315,7 @@ private:
  */
 ```
 
-## [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
+## 29. [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
 
 ```c
 class Solution {
@@ -1339,23 +1339,23 @@ public:
 };
 ```
 
-## [232. Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/description/)
+## 30. [232. Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/description/)
 
 ```c
 ```
 
-## [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi/description/)
+## 31. [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi/description/)
 ```c
 ```
 
-## [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
+## 32. [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
 ```c
 ```
 
-## [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
+## 33. [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
 ```c
 ```
 
-## [981. Time Based Key-Value Store](https://leetcode.com/problems/time-based-key-value-store/description/)
+## 34. [981. Time Based Key-Value Store](https://leetcode.com/problems/time-based-key-value-store/description/)
 ```c
 ```
