--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1342,6 +1342,41 @@ public:
 ## 30. [232. Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/description/)
 
 ```c
+class MyQueue {
+public:
+    MyQueue() {
+    }
+    
+    void push(int x) {
+        pushStack.push(x);
+    }
+    
+    int pop() {
+        pushStackToPopStackIfNecessary();
+        int result = popStack.top();
+        popStack.pop();
+        return result;
+    }
+    
+    int peek() {
+        pushStackToPopStackIfNecessary();
+        return popStack.top();
+    }
+    
+    bool empty() {
+        return popStack.empty() && pushStack.empty();
+    }
+private: 
+    stack<int> popStack, pushStack;
+    void pushStackToPopStackIfNecessary() {
+        if (popStack.empty()) {
+            while (!pushStack.empty()) {
+                popStack.push(pushStack.top());
+                pushStack.pop();
+            }
+        }
+    }    
+};
 ```
 
 ## 31. [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi/description/)
