--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1381,6 +1381,37 @@ private:
 
 ## 31. [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi/description/)
 ```c
+class Solution {
+public:
+    int myAtoi(string s) {
+        int i = 0;
+        int sign = 1; 
+        long ans = 0;
+        while (i < s.length() && s[i] == ' ') {
+            i++;
+        }
+        if (s[i] == '-') {
+            sign = -1;
+            i++;
+        } else if (s[i] == '+') {
+            i++;
+        }
+        while (i < s.length()) {
+            if (s[i] >= '0' && s[i] <= '9') {
+                ans = ans*10 + (s[i] - '0');
+                if (ans > INT_MAX && sign == -1) {
+                    return INT_MIN;
+                } else if (ans > INT_MAX && sign == 1) {
+                    return INT_MAX;
+                }
+                i++;
+            } else {
+                return ans * sign;
+            }
+        }
+        return ans * sign;
+    }
+};
 ```
 
 ## 32. [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
