--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1416,6 +1416,42 @@ public:
 
 ## 32. [981. Time Based Key-Value Store](https://leetcode.com/problems/time-based-key-value-store/description/)
 ```c
+class TimeMap {
+public:
+    TimeMap() {
+        
+    }
+    
+    void set(string key, string value, int timestamp) {
+        map[key].emplace_back(timestamp, value);
+    }
+    
+    string get(string key, int timestamp) {
+        if (map.find(key) == map.end()) {
+            return "";
+        }
+        int low = 0;
+        int high = map[key].size() - 1;
+        while (low <= high) {
+            int mid = (low + high) / 2;
+            if (map[key][mid].first < timestamp) {
+                low = mid + 1;
+            } else if (map[key][mid].first > timestamp) {
+                high = mid - 1;
+            } else {
+                return map[key][mid].second;
+            }
+        }
+
+        if (high >= 0) {
+            return map[key][high].second;
+        } else {
+            return "";
+        }
+    }
+private:
+    unordered_map<string, vector<pair<int, string>>> map;
+};
 ```
 
 ## 33. [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
