--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1456,6 +1456,42 @@ private:
 
 ## 33. [54. Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/)
 ```c
+class Solution {
+public:
+    vector<int> spiralOrder(vector<vector<int>>& matrix) {
+        int top = 0;
+        int left = 0;
+        int bottom = matrix.size() - 1;
+        int right = matrix[0].size() - 1;
+        vector<int> result;
+        while (top <= bottom && left <= right) {
+            for (int i = left; i <= right; i++) {
+                result.push_back(matrix[top][i]);
+            }
+            top++;
+
+            for (int i = top; i <= bottom; i++) {
+                result.push_back(matrix[i][right]);
+            }
+            right--;
+
+            if (top <= bottom) {
+                for (int i = right; i >= left; i--) {
+                    result.push_back(matrix[bottom][i]);
+                }
+                bottom--;
+            }
+
+            if (left <= right) {
+                for (int i = bottom; i >= top; i--) {
+                    result.push_back(matrix[i][left]);
+                }
+                left++;
+            }
+        }
+        return result;
+    }
+};
 ```
 
 ## 34. [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
