--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1498,3 +1498,11 @@ public:
 ```c
 ```
 
+## 35. [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/description/)
+```c
+```
+
+## 36. [11. Container With Most Water](https://leetcode.com/problems/container-with-most-water/description/)
+```c
+```
+
