--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -402,7 +402,7 @@ class MaximumGold {
         for (int i = 1; i <= n; i++) { // num of mines
             for (int j = 1; j <= w; j++) { // num of workers
                 if (j < p[i - 1]) {
-                    result[i][j] = result[i][j];
+                    result[i][j] = result[i-1][j];
                 } else {
                     result[i][j] = Math.max(result[i - 1][j], result[i - 1][j - p[i - 1]] + g[i - 1]);
                 }
@@ -1496,6 +1496,19 @@ public:
 
 ## 34. [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/)
 ```c
+class Solution {
+public:
+    bool hasCycle(ListNode *head) {
+        ListNode *slow = head, *fast = head;
+        while (fast != nullptr && fast->next != nullptr && fast->next->next != nullptr) {
+            fast = fast->next->next;
+            slow = slow->next;
+            if (fast == slow)
+                return true;
+        }
+        return false;
+    }
+};
 ```
 
 ## 35. [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/description/)
