--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1511,6 +1511,10 @@ public:
 };
 ```
 
+More,
+1. How to get the length of the circle?
+2. How to get the entry point of the circle?
+
 ## 35. [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/description/)
 ```c
 ```
