--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1523,3 +1523,7 @@ More,
 ```c
 ```
 
+# 37. [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)
+```c
+```
+
