--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1545,3 +1545,7 @@ public:
 ```c
 ```
 
+## 38. [2523. Closest Prime Numbers in Range](https://leetcode.com/problems/closest-prime-numbers-in-range/description/)
+```c
+```
+
