--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1539,6 +1539,24 @@ public:
 
 ## 36. [11. Container With Most Water](https://leetcode.com/problems/container-with-most-water/description/)
 ```c
+class Solution {
+public:
+    int maxArea(vector<int>& height) {
+        int left = 0;
+        int right = height.size() - 1;
+        int maxArea = 0;
+        while (left < right) {
+            int area = min(height[left], height[right]) * (right - left);
+            maxArea = max(area, maxArea);
+            if (height[left] < height[right]) {
+                left++;
+            } else {
+                right--;
+            }
+        }
+        return maxArea;
+    }
+};
 ```
 
 ## 37. [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)
@@ -1570,6 +1588,14 @@ public:
 ```
 
 ## 38. [2523. Closest Prime Numbers in Range](https://leetcode.com/problems/closest-prime-numbers-in-range/description/)
+```c
+```
+
+## 39. [297. Serialize and Deserialize Binary Tree](https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/)
+```c
+```
+
+## 40. [200. Number of Islands](https://leetcode.com/problems/number-of-islands/description/)
 ```c
 ```
 
