--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1599,3 +1599,7 @@ public:
 ```c
 ```
 
+## 41. [1979. Find Greatest Common Divisor of Array](https://leetcode.com/problems/find-greatest-common-divisor-of-array/description/)
+```c
+```
+
