--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1600,6 +1600,13 @@ public:
 ```
 
 ## 41. [1979. Find Greatest Common Divisor of Array](https://leetcode.com/problems/find-greatest-common-divisor-of-array/description/)
+
+[GCD](https://blog.nowcoder.net/n/7e6f3857779c4cdc8d88b82e62e957b0)
+1. Brute Force
+2. Euclidean Division
+3. Phase Reduction Technique
+4. Combination of Phase Reduction Technique and Transposition
+
 ```c
 ```
 
