--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1608,6 +1608,56 @@ public:
 4. Combination of Phase Reduction Technique and Transposition
 
 ```c
+class Solution {
+public:
+    int findGCD(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int a = nums.front();
+        int b = nums.back();
+        return fast(a, b);
+    }
+
+private:
+    int bruteForce(int a, int b) {
+        for (int i = a; i > 1; i--) {
+            if (a % i == 0 && b % i == 0) {
+                return i;
+            }
+        }
+        return 1;
+    }
+
+    int euclideanDivision(int a, int b) {
+        if (b % a == 0) {
+            return a;
+        }
+        return euclideanDivision(b % a, a);
+    }
+
+    int phaseReduction(int a, int b) {
+        if (b % a == 0) {
+            return a;
+        }
+        return phaseReduction(min(a, b-a), max(a, b-a));
+    }
+
+    int fast(int a, int b) {
+        if (a == b) {
+            return a;
+        }
+        if (a&1 == 0 && b&1 == 0) {
+            return fast(a>>1, b>>1)<<1;
+        } else if (a&1 == 0 && b&1 == 1) {
+            return fast(a>>1, b);
+        } else if (a&1 == 1 && b&1 == 0) {
+            return fast(a, b>>1);
+        } else {
+            int big = a > b ? a : b;
+            int small = a > b ? b : a;
+            return fast(big - small, small);
+        }
+    }
+};
 ```
 
 ## 42. [204. Count Primes](https://leetcode.com/problems/count-primes/description/)
