--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1662,5 +1662,33 @@ private:
 
 ## 42. [204. Count Primes](https://leetcode.com/problems/count-primes/description/)
 ```c
+class Solution {
+public:
+    int countPrimes(int n) {
+        if (n <= 2) {
+            return 0;
+        }
+
+        vector<bool> flags(n, true);
+        flags[0] = false;
+        flags[1] = false;
+        for (int i = 2; i * i < n; i++) {
+            if (flags[i]) {
+                for (long j = i * i; j < n; j = j + i) {
+                    flags[j] = false;
+                }
+            }
+        }
+
+        int count = 0;
+        for (int i = 2; i < n; i++) {
+            if (flags[i]) {
+                count++;
+            }
+        }
+        
+        return count;
+    }
+};
 ```
 
