--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1596,6 +1596,7 @@ public:
 ```
 
 ## 40. [200. Number of Islands](https://leetcode.com/problems/number-of-islands/description/)
+1. union search / disjoint set
 ```c
 ```
 
