--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -1589,6 +1589,43 @@ public:
 
 ## 38. [2523. Closest Prime Numbers in Range](https://leetcode.com/problems/closest-prime-numbers-in-range/description/)
 ```c
+class Solution {
+public:
+    vector<int> closestPrimes(int left, int right) {
+        vector<int> flags(right+1, 1);
+        flags[0] = 0;
+        flags[1] = 0;
+
+        for (int i = 2; i * i <= right; i++) {
+            for (int j = i * i; j <= right; j = j + i) {
+                flags[j] = 0;
+            }
+        }
+
+        vector<int> result = {-1, -1};
+        int min = INT_MAX;
+        int l = -1;
+        int r = -1;
+        for (int i = left; i <= right; i++) {
+            if (flags[i] == 1) {
+                printf("i: %d\n", i);
+                if (l == -1 && r == -1) {
+                    l = i;
+                    r = i;
+                } else {
+                    l = r;
+                    r = i;
+                    if (r - l < min) {
+                        min = r - l;
+                        result[0] = l;
+                        result[1] = r;
+                    }
+                }
+            }
+        }
+        return result;
+    }
+};
 ```
 
 ## 39. [297. Serialize and Deserialize Binary Tree](https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/)
